2014-11-24  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.c (GetPW): If server is NULL, and the user is not a local
	user, try to fetch the DC to use as server.
	(ChangePW): Get Windows username via extra parameter.
	(usage): Reduce -d help text to reflect above change.
	(main): Fix typo in comment.  Call GetPW and ChangePW as per the
	changes above.

2014-11-12  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (usage): Fix language.
	* mkpasswd.c (usage): Ditto.

2014-11-12  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (enum_unix_groups): Always print groupname with machine
	prefix.
	(usage): Extend help output for -l option.
	(main): Drop superfluous goto and label.  Make machine prefixing for
	local machine when using -l option dependend on options in
	/etc/nsswitch.conf.
	* mkpasswd.c: Ditto.

2014-11-10  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (dump_sysinfo): Handle Windows 10/Server 2014(?).

2014-11-03  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (enum_local_groups): Don't generate leading separator char
	for builtin accounts.

2014-10-29  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (setfacl): Fix bracketing in expression.

2014-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (usage): Add -b to require options.

2014-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (action_t): Add DeleteAll value.
	(delacl): New function to remove all ACL entries not representing POSIX
	permissions.
	(setfacl): Rearrange conditional expression into switch statement.
	Add DeleteAll case.
	(usage): Add and describe -b option.
	(longopts): Add --remove-all option.
	(opts): Add -b option.
	(main): Handle -b option.

2014-10-21  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (CYGLSA64_DLL): Remove unused macro.
	(dump_sysinfo): If COMSPEC isn't set in the MSVCRT environment, set it.
	Explain why.

2014-09-03  Corinna Vinschen  <corinna@vinschen.de>
