@@ -1,3 +1,12 @@
+2014-11-27  Corinna Vinschen  <corinna@vinschen.de>
+
+	* mkgroup.c (main): Call enum_groups with offset 0x30000 for local
+	machine, same as from DB.
+	* mkpasswd.c (enum_unix_users): Set pw_passwd field to '*'.
+	(enum_users): Ditto.
+	(main): Call enum_users with offset of 0x30000 for local machine,
+	same as from DB.
+
 2014-11-24  Corinna Vinschen  <corinna@vinschen.de>
 
 	* passwd.c (GetPW): If server is NULL, and the user is not a local
